# euclidlib

./: .all-contributorsrc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: issue-template.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: release.yml  tests.yml
_build/logs/: myst.build.json
demo/: spectro.ipynb
demo/BOSS_2PCF/: EUC_LE3_GCL_2PCF_BOSS_DR12v5_CMASSLOWZTOT_North_bin1_Correlation_AUTO_2DPOL_763DCA2E6E2D_20240220T235142.0Z.fits  EUC_LE3_GCL_2PCF_BOSS_DR12v5_CMASSLOWZTOT_North_bin1_Correlation_AUTO_2DPOL_763DCA2E6E2D_20240220T235142.0Z.xml  EUC_LE3_GCL_2PCF_BOSS_DR12v5_CMASSLOWZTOT_North_bin1_Correlation_MULTIPOLES_763DCA2E6E2D_20240220T235142.0Z.fits  EUC_LE3_GCL_2PCF_BOSS_DR12v5_CMASSLOWZTOT_North_bin1_PAIRS_AUTO_2DPOL_763DCA2E6E2D_20240220T235142.0Z.fits
docs/: ._toc.yml.bak  CNAME  _config.yml  _toc.yml  acknowledgments.md  conf.py  contributors.md  examples.ipynb  format.md  getting_started.ipynb  index.md  installation.md  intro.md  matplotlibrc  modules.md  myst.yml  nz_example.fits  requirements.txt
docs/_build/.doctrees/: acknowledgments.doctree  environment.pickle  getting_started.doctree  installation.doctree  intro.doctree
docs/_build/html/: .buildinfo  acknowledgments.html  genindex.html  getting_started.html  installation.html  intro.html  objects.inv  search.html  searchindex.js
euclid_data_products/photo/: __init__.py  _le3_pk_wl.py  _phz.py
euclidlib/: __init__.py  _util.py  phz.py
euclidlib/le3/: __init__.py  _common.py  _twopcf_wl.py  bao_gc.py  pk_gc.py  pk_wl.py  twopcf_gc.py  twopcf_wl.py
euclidlib/photo/: __init__.py  _le3_2pcf_wl.py  _le3_pk_wl.py  _phz.py  photo_data.py
euclidlib/phz/: __init__.py  _phz.py
euclidlib/spectro/: __init__.py  _datamodel.py  _le3_gc_fourier.py  _le3_pk_gc.py  _table_reader.py  _utils.py
tests/: conftest.py  test_util.py
tests/data/: two_point_correlation_function_Xi.fits
tests/le3/: test_le3_2pcf_wl.py  test_le3_bao_gc.py  test_le3_pk_gc.py  test_le3_pk_wl.py
tests/photo/: test_le3_2pcf_wl.py  test_le3_pk_wl.py  test_phz.py
tests/spectro/: test_le3_gc_fourier.py
(+30 files in other folders)
